crates/monochange/tests/snapshots/github_releases__publish_github_release_dry_run_matches_snapshot@default_custom_sections.snap
---
source: crates/monochange/tests/github_releases.rs
expression: redacted
---
{
  "issueComments": [],
  "manifest": {
    "changedFiles": [
      "Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "[multiline text]"
              ],
              "title": "Security"
            }
          ],
          "summary": [],
          "title": "core [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/core/v1.0.1) ([DATE])"
        },
        "ownerId": "core",
        "ownerKind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actorProfiles": true,
            "commitWebUrls": true,
            "issueComments": true,
            "relatedIssues": true,
            "reviewRequestLookup": true
          },
          "host": "github.com",
          "introduced": null,
          "lastUpdated": null,
          "provider": "github",
          "relatedIssues": []
        },
        "details": "Roll the signing key before the release window closes.",
        "path": ".changeset/security.md",
        "summary": "rotate signing keys",
        "targets": [
          {
            "bump": "patch",
            "changeType": "security",
            "evidenceRefs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "publish-release",
    "deletedChangesets": [],
    "dryRun": true,
    "groupVersion": null,
    "packagePublications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.0.1"
      }
    ],
    "plan": {
      "compatibilityEvidence": [],
      "decisions": [
        {
          "bump": "patch",
          "package": "cargo:crates/core/Cargo.toml",
          "plannedVersion": "1.0.1",
          "reasons": [
            "rotate signing keys"
          ],
          "trigger": "direct-change",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolvedItems": [],
      "warnings": [],
      "workspaceRoot": "."
    },
    "releaseTargets": [
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "renderedChangelogTitle": "core [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/core/v1.0.1) ([DATE])",
        "renderedTitle": "core 1.0.1 ([DATE])",
        "tag": true,
        "tagName": "core/v1.0.1",
        "version": "1.0.1",
        "versionFormat": "namespaced"
      }
    ],
    "releasedPackages": [
      "workflow-core"
    ],
    "version": "1.0.1"
  },
  "packagePublish": null,
  "publishRateLimits": null,
  "releaseCommit": null,
  "releaseRequest": null,
  "releases": [
    {
      "body": "[multiline text]",
      "draft": false,
      "generateReleaseNotes": false,
      "name": "core 1.0.1 ([DATE])",
      "owner": "ifiokjr",
      "prerelease": false,
      "provider": "github",
      "repo": "monochange",
      "repository": "ifiokjr/monochange",
      "tagName": "core/v1.0.1",
      "targetId": "core",
      "targetKind": "package"
    }
  ]
}
